changed latlong to latlong2

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -15,6 +15,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+dependency_overrides:
+  flutter_map: 
+    git:
+      url: https://github.com/passsy/flutter_map.git
+      ref: latlong2
 
 dev_dependencies:
   flutter_test:
