--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,9 +10,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  location: ^4.1.1
   flutter_map: ^0.12.0
+  location: ^4.1.1
   flutter_compass: ^0.6.0
+
+dependency_overrides:
+  flutter_map: 
+    git:
+      url: https://github.com/passsy/flutter_map.git
+      ref: latlong2
 
 dev_dependencies:
   flutter_test:
