--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,15 +10,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_map: ^0.12.0
+  flutter_map:
+    git:
+      url: https://github.com/fleaflet/flutter_map.git
   location: ^4.1.1
   flutter_compass: ^0.6.0
-
-dependency_overrides:
-  flutter_map: 
-    git:
-      url: https://github.com/passsy/flutter_map.git
-      ref: latlong2
 
 dev_dependencies:
   flutter_test:
